-- V9__create_pomodoro_session_table.sql
-- Create pomodoro_session table to replace deprecated session_note table
-- This migration is fully idempotent and safe to run multiple times

-- Drop deprecated session_note table if it exists
DROP TABLE IF EXISTS session_note CASCADE;

-- Drop old sequence if it exists
DROP SEQUENCE IF EXISTS pomodoro_session_id_seq CASCADE;

-- Create pomodoro_session table if it doesn't exist
CREATE TABLE IF NOT EXISTS pomodoro_session (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    session_title VARCHAR(255) NOT NULL,
    session_type VARCHAR(255) NOT NULL,
    status VARCHAR(255),
    focus_duration BIGINT NOT NULL,
    break_duration BIGINT NOT NULL,
    total_cycles INTEGER,
    current_phase VARCHAR(255),
    notes TEXT,
    activity_id BIGINT,
    started_at TIMESTAMP WITHOUT TIME ZONE,
    completed_at TIMESTAMP WITHOUT TIME ZONE,
    cycles_completed INTEGER NOT NULL,
    is_deleted BOOLEAN NOT NULL,
    created_at TIMESTAMP WITHOUT TIME ZONE,
    updated_at TIMESTAMP WITHOUT TIME ZONE,
    phase_started_at TIMESTAMP,
    total_paused_duration_seconds BIGINT DEFAULT 0,
    CONSTRAINT pk_pomodoro_session PRIMARY KEY (id)
);

-- Ensure all columns exist (in case table was partially created)
DO $$
BEGIN
    -- Add phase_started_at if missing (from V5)
    IF NOT EXISTS (
        SELECT 1 FROM information_schema.columns 
        WHERE table_schema = 'public' 
        AND table_name = 'pomodoro_session' 
        AND column_name = 'phase_started_at'
    ) THEN
        ALTER TABLE pomodoro_session ADD COLUMN phase_started_at TIMESTAMP;
        RAISE NOTICE 'Added phase_started_at column';
    END IF;
    
    -- Add total_paused_duration_seconds if missing (from V5)
    IF NOT EXISTS (
        SELECT 1 FROM information_schema.columns 
        WHERE table_schema = 'public' 
        AND table_name = 'pomodoro_session' 
        AND column_name = 'total_paused_duration_seconds'
    ) THEN
        ALTER TABLE pomodoro_session ADD COLUMN total_paused_duration_seconds BIGINT DEFAULT 0;
        RAISE NOTICE 'Added total_paused_duration_seconds column';
    END IF;
END $$;

-- Handle foreign key constraint to activity table
DO $$
BEGIN
    -- Check if activity table exists
    IF EXISTS (
        SELECT 1 
        FROM information_schema.tables 
        WHERE table_schema = 'public' 
        AND table_name = 'activity'
    ) THEN
        -- Drop constraint if it exists (to recreate with proper settings)
        IF EXISTS (
            SELECT 1 
            FROM information_schema.table_constraints 
            WHERE constraint_schema = 'public'
            AND constraint_name = 'fk_pomodoro_session_on_activity'
            AND table_name = 'pomodoro_session'
        ) THEN
            ALTER TABLE pomodoro_session DROP CONSTRAINT fk_pomodoro_session_on_activity;
            RAISE NOTICE 'Dropped existing FK_POMODORO_SESSION_ON_ACTIVITY constraint';
        END IF;
        
        -- Add constraint with ON DELETE SET NULL
        ALTER TABLE pomodoro_session
            ADD CONSTRAINT fk_pomodoro_session_on_activity 
            FOREIGN KEY (activity_id) REFERENCES activity (id) ON DELETE SET NULL;
        RAISE NOTICE 'Added FK_POMODORO_SESSION_ON_ACTIVITY constraint';
    ELSE
        RAISE WARNING 'Activity table does not exist, skipping foreign key constraint';
    END IF;
END $$;

-- Create indexes for better query performance
CREATE INDEX IF NOT EXISTS idx_pomodoro_session_activity_id ON pomodoro_session(activity_id);
CREATE INDEX IF NOT EXISTS idx_pomodoro_session_status ON pomodoro_session(status);
CREATE INDEX IF NOT EXISTS idx_pomodoro_session_started_at ON pomodoro_session(started_at);
CREATE INDEX IF NOT EXISTS idx_pomodoro_session_completed_at ON pomodoro_session(completed_at);
CREATE INDEX IF NOT EXISTS idx_pomodoro_session_is_deleted ON pomodoro_session(is_deleted);
CREATE INDEX IF NOT EXISTS idx_pomodoro_session_session_type ON pomodoro_session(session_type);
CREATE INDEX IF NOT EXISTS idx_pomodoro_session_current_phase ON pomodoro_session(current_phase);

-- Add table and column comments for documentation
COMMENT ON TABLE pomodoro_session IS 'Stores pomodoro session data with timer state tracking. Replaces deprecated session_note table.';
COMMENT ON COLUMN pomodoro_session.session_title IS 'Title or name of the pomodoro session';
COMMENT ON COLUMN pomodoro_session.session_type IS 'Type of session: STANDARD, CUSTOM, etc.';
COMMENT ON COLUMN pomodoro_session.status IS 'Session status: ACTIVE, COMPLETED, PAUSED, CANCELLED';
COMMENT ON COLUMN pomodoro_session.focus_duration IS 'Focus duration in milliseconds';
COMMENT ON COLUMN pomodoro_session.break_duration IS 'Break duration in milliseconds';
COMMENT ON COLUMN pomodoro_session.total_cycles IS 'Total number of planned pomodoro cycles';
COMMENT ON COLUMN pomodoro_session.current_phase IS 'Current phase: FOCUS, SHORT_BREAK, LONG_BREAK';
COMMENT ON COLUMN pomodoro_session.notes IS 'Session notes or description';
COMMENT ON COLUMN pomodoro_session.activity_id IS 'Associated activity (foreign key to activity table)';
COMMENT ON COLUMN pomodoro_session.started_at IS 'When the session started';
COMMENT ON COLUMN pomodoro_session.completed_at IS 'When the session completed';
COMMENT ON COLUMN pomodoro_session.cycles_completed IS 'Number of completed pomodoro cycles';
COMMENT ON COLUMN pomodoro_session.is_deleted IS 'Soft delete flag';
COMMENT ON COLUMN pomodoro_session.phase_started_at IS 'Timestamp when current phase started (for timer sync)';
COMMENT ON COLUMN pomodoro_session.total_paused_duration_seconds IS 'Total seconds paused in current phase (for timer sync)';