classDiagram
    class User {
        +int userId
        +string name
        +string email
        -string passwordHash
        +datetime createdAt
        +datetime updatedAt
    }

    class Activity {
        +int activityId
        #int userId
        +string title
        +string description
        +datetime createdAt
        +datetime updatedAt
    }

    class PomodoroSession {
        +int sessionId
        #int userId
        #int activityId
        #int teamId
        +string type
        +datetime startTime
        +datetime endTime
        +int duration
        +string status
    }

    class Note {
        +int noteId
        #int sessionId
        +string content
        +datetime createdAt
        +datetime updatedAt
    }

    class Team {
        +int teamId
        +string teamName
        #int ownerId
        +datetime createdAt
        +datetime updatedAt
    }

    class TeamMember {
        +int teamMemberId
        #int teamId
        #int userId
    }

    %% Relationships
    User "1" --> "0..*" Activity : owns
    User "1" --> "0..*" PomodoroSession : creates
    Activity "1" --> "0..*" PomodoroSession : categorizes
    PomodoroSession "1" --> "0..*" Note : has
    Team "1" --> "0..*" PomodoroSession : contains
    Team "1" --> "0..*" TeamMember : has
    User "1" --> "0..*" TeamMember : member_of
